--- a/adddefects.html
+++ b/adddefects.html
@@ -52,17 +52,23 @@
                     </li>
                     <!-- your sidebar here -->
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
-                            <i class="material-icons">bug_report</i>
-                            <p>Add Defect</p>
+                        <a class="nav-link" href="adddefects.html">
+                          <i class="material-icons">bug_report</i>
+                          <p>Add Defect</p>
                         </a>
-                    </li>
-                    <li class="nav-item">
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="table.html">
-                            <i class="material-icons">account_box</i>
-                            <p>Viewdefect</p>
+                          <i class="material-icons">table_chart</i>
+                          <p>view Defect</p>
                         </a>
-                    </li>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="profile.html">
+                          <i class="material-icons">account_box</i>
+                          <p>Profile</p>
+                        </a>
+                      </li>
                 </ul>
             </div>
         </div>
