--- a/profile.html
+++ b/profile.html
@@ -54,8 +54,14 @@
 							<p>Add Defect</p>
 						</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="table.html">
+							<i class="material-icons">table_chart</i>
+							<p>view Defect</p>
+						</a>
+					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="#">
+						<a class="nav-link" href="profile.html">
 							<i class="material-icons">account_box</i>
 							<p>Profile</p>
 						</a>
