--- a/dashboard.html
+++ b/dashboard.html
@@ -67,13 +67,13 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="table.html">
-                <i class="material-icons">account_box</i>
+                <i class="material-icons">table_chart</i>
                 <p>view Defect</p>
               </a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="profile.html">
-                <i class="material-icons">user</i>
+                <i class="material-icons">account_box</i>
                 <p>Profile</p>
               </a>
             </li>
@@ -87,9 +87,9 @@
         >
           <div class="container-fluid">
             <div class="navbar-wrapper">
-              <a class="navbar-brand" style="color: #FFF" href="#pablo"
-                >Defect Tracker System</a
-              >
+              <a class="navbar-brand" style="color: #FFF" href="#pablo">
+                <addHeadCenter class="addDefectCenter"> <i class="fas fa-chart-line" /></i> &nbsp; Dashboard </addHeadCenter>
+              </a>
             </div>
             <button
               class="navbar-toggler"
