--- a/table.html
+++ b/table.html
@@ -80,7 +80,7 @@
         </div>
         <div class="sidebar-wrapper" id="sidebar-wrapper">
           <ul class="nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="dashboard.html">
                 <i class="material-icons">dashboard</i>
                 <p>Dashboard</p>
@@ -93,10 +93,16 @@
                 <p>Add Defect</p>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="table.html">
+                <i class="material-icons">table_chart</i>
+                <p>view Defect</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile.html">
                 <i class="material-icons">account_box</i>
-                <p>Viewdefect</p>
+                <p>Profile</p>
               </a>
             </li>
           </ul>
